# gerenciamento-estoque

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  config.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
endpoints/: __init__.py  auth.py  clientes.py  dashboard.py  estoque.py  logs.py  pdv.py  usuarios.py  utils.py
migrations/: README  env.py
migrations/versions/: 0001_schema_inicial.py
models/: __init__.py  cliente.py  log.py  produto.py  usuario.py  venda.py
services/: logger.py
templates/: 403.html  alterar_senha.html  base.html  login.html
templates/clientes/: form.html  index.html
templates/dashboard/: index.html
templates/estoque/: form.html  index.html
templates/logs/: index.html
templates/pdv/: index.html
templates/usuarios/: form.html  index.html
