[project]
name = "gerenciamento-estoque"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "flask>=3.1,<4.0",
  "flask-login>=0.6,<1.0",
  "flask-migrate>=4.0,<5.0",
  "flask-sqlalchemy>=3.1,<4.0",
  "flask-wtf>=1.2,<2.0",
  "gunicorn~=23.0.0",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0"
]
